update2 en otra rama

--- a/index.html
+++ b/index.html
@@ -35,7 +35,51 @@
 			</div>
 		</div>
 	</section>
-	
+	<section id="banner" class="sections">
+		<div class="container">
+			<div class="bd-text-banner">
+				<h1>Pide tu bebida desde tu móvil</h1>
+				<p>Olvida tener que ir al mercado, o a la bodega de la esquina cuando quieres<br>
+					una bebida. BonDrink te lleva desde el café en la mañanas, hasta los tragos<br>
+					de la noche a domicilio y con los mejores precios.</p>
+				<div class="bd-play">
+					<span data-toggle="modal" data-target=".bs-example-modal-lg">
+						<i class="glyphicon glyphicon-triangle-right"></i>
+					</span>
+				</div>
+				<div class="bd-download">
+					<a href="#">Descarga APP</a>
+				</div>
+				<p class="bd-font-normal">Pronto en Cuzco y en Trujillo</p>
+			</div>
+		</div>
+	</section>
+	<section id="banner" class="sections">
+		<div class="container">
+			<div class="bd-text-banner">
+				<h1>Pide tu bebida desde tu móvil</h1>
+				<p>Olvida tener que ir al mercado, o a la bodega de la esquina cuando quieres<br>
+					una bebida. BonDrink te lleva desde el café en la mañanas, hasta los tragos<br>
+					de la noche a domicilio y con los mejores precios.</p>
+				<div class="bd-play">
+					<span data-toggle="modal" data-target=".bs-example-modal-lg">
+						<i class="glyphicon glyphicon-triangle-right"></i>
+					</span>
+				</div>
+				<div class="bd-download">
+					<a href="#">Descarga APP</a>
+				</div>
+				<p class="bd-font-normal">Pronto en Cuzco y en Trujillo</p>
+			</div>
+		</div>
+	</section>
+	<section>
+		<div class="container">
+			<div class="bd-tex-banner">
+				<h1>Probando el git revert</h1>
+			</div>
+		</div>
+	</section>
 	<section id="work-us" class="sections">
 		<div class="container">
 			<div class="bd-title">
